--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_URL=postgresql://localhost:5432/AnimalShelter
+DB_URL=jdbc:postgresql://localhost:5432/AnimalShelter
 DB_USERNAME=postgres
-DB_PASSWORD=Metra2004
+DB_PASSWORD=724036
