--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_URL=jdbc:postgresql://localhost:5432/AnimalShelter
-DB_USERNAME=postgres
-DB_PASSWORD=724036
+DB_URL=your_db_url
+DB_USERNAME=your_db_username
+DB_PASSWORD=your_db_password
